BUG FIX: Correct z-index stacking of elements along top of Main UI on mobile to prevent misfiring click events

--- a/src/index.css
+++ b/src/index.css
@@ -528,7 +528,7 @@ Toggle
     position: absolute;
     top: 2.5vw;
     left: 0;
-    z-index: 5;
+    z-index: 9;
     position: fixed;
 }
 
@@ -648,7 +648,7 @@ form {
     left: 0;
     width: 100vw;
     height: 20vw;
-    z-index: 4;
+    z-index: 8;
 }
 
 form>input {
@@ -987,8 +987,8 @@ Contact
 }
 
 .form-contact>.form-logo {
-    width: 25vw;
-    height: 25vw;
+    width: 30vw;
+    height: 30vw;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
